Changes from jTDS 1.1
=====================

09/27/2005 - David Kilzer
 o Added info to the FAQ about the jTDS implementation of
   javax.naming.spi.ObjectFactory.

09/26/2005 - David Kilzer
 o Applied Mike's patch for bug [1299147] Latest change does not compile
   with java 1.5.  This patch cleans up the use of checkOpen() in a
   number of methods in JtdsCallableStatement, JtdsPreparedStatement,
   JtdsStatement and JtdsResultSet.

09/23/2005 - David Kilzer
 o Fixed compilation on Java 1.5 in MessagesPropertiesUnitTest.  Thanks
   to Mike Hutchinson for the patch in bug [1299147] Latest change does
   not compile with java 1.5.

09/22/2005 - David Kilzer
 o Added MessagesPropertiesUnitTest to ensure every prop.* property has
   a matching prop.desc.* property and vice-versa.

09/21/2005 - David Kilzer
 o Applied patch for bug [1253127] Improved decimal peformance for MSSQL
   SP4 by Mike Hutchinson.  This patch also fixes bug [1236078] Procedure
   doesn't get called for some BigDecimal values (in Java 1.5).

09/20/2005 - David Kilzer
 o Removed RequestStream.setMaxPrecision() and added a 'maxPrecision'
   argument to the RequestStream constructor.  This value should never
   change during the life of the RequestStream, and thus should be set
   in the constructor.  Updated SharedSocket.getRequestStream() method.
 o Refactored SharedSocket constructor to take only a single argument
   of type ConnectionJDBC2.  Added some package-private getter methods
   to ConnectionJDBC2.
 o Replaced SharedNamedPipe.instance() method with a public constructor.
 o Simplified SharedNamedPipe and SharedLocalNamedPipe constructors by
   passing in a ConnectionJDBC2 object instead of a laundry list of
   data values.  Added more package-private getter methods to the
   ConnectionJDBC2 class.  Moved SharedNamedPipe.calculateBufferSize()
   to Support.calculateNamedPipeBufferSize().  Changed hard-coded buffer
   values in SharedLocalNamedPipe constructor to use the value returned