@@ -178,6 +178,7 @@ error.ssl.encryptionoff=Encryption is not enabled at the server.
 error.statement.badbatch=Unable to execute batch of type {0}.
 error.statement.badsql=The SQL statement must not contain a procedure call or parameter markers.
 error.statement.batchnocount=A statement attempted to return a result set in executeBatch().
+error.statement.gtmaxrows=The requested fetch size is greater than the maximum number of rows.
 error.statement.needcolindex=One valid column index must be supplied.
 error.statement.needcolname=One valid column name must be supplied.
 error.statement.nocount=The executeUpdate method must not return a result set.
