@@ -1,6 +1,9 @@
 Changes from jTDS 1.1
 =====================
 
+10/18/2005 - Alin Sinpalean
+ o Corrected bug [1327029] setFetchSize give incorrect error message.
+
 09/27/2005 - David Kilzer
  o Added info to the FAQ about the jTDS implementation of
    javax.naming.spi.ObjectFactory.
